--- a/singolo.html
+++ b/singolo.html
@@ -12,14 +12,29 @@
 <body>
     <header class="header">
       <div class="wrapper header__wrapper">
-        <h2 class="site__name">SINGOLO*</h2>
-        <nav class="header__navigation">
+        <div class="site_name__wrapper">
+          <h2 class="site__name">SINGOLO</h2>
+          <div class="star">
+            *
+          </div>
+        </div>
+        <nav class="header__navigation" id="home">
           <ul class="navigation">
-            <li class="navigation__link">HOME</li>
-            <li class="navigation__link">SERVICES</li>
-            <li class="navigation__link">PORTFOLIO</li>
-            <li class="navigation__link">ABOUT</li>
-            <li class="navigation__link">CONTACT</li>
+            <li class="navigation__link">
+              <a href="#home">HOME</a>
+            </li>
+            <li class="navigation__link">
+              <a href="#services">SERVICES</a>
+            </li>
+            <li class="navigation__link">
+              <a href="#portfolio">PORTFOLIO</a>
+            </li>
+            <li class="navigation__link">
+              <a href="#about">ABOUT</a>
+            </li>
+            <li class="navigation__link">
+              <a href="#contact">CONTACT</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -34,7 +49,7 @@
     </div>
       <section class="our-services">
         <div class="wrapper our-services__wrapper">
-          <h1 class="our-service__title">Our Services</h1>
+          <h1 class="our-service__title" id="services">Our Services</h1>
           <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <div class="wrapper layout-2-span-3-column__wrapper">
             <div class="wrapper_layout">
@@ -85,7 +100,7 @@
       </section>
       <section class="portfolio">
         <div class="wrapper">
-          <h1 class="portfolio__title">Portfolio</h1>
+          <h1 class="portfolio__title" id="portfolio">Portfolio</h1>
           <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           <div class="button_portfolio">
             <span class="button_portfolio__item">
@@ -147,7 +162,7 @@
             <p>© Copyright 2013</p>
           </div>
           <div class="social">
-            <ul class="ico-networks">
+            <ul class="ico-networks" id="contact">
               <li class="ico-networks__link">
                 <a href="#">
                   <img src="img/svg/social icons/ico-facebook.svg" alt="facebook">
