refactor: add correct links to images in slider-section, correct the styles for slider-section

--- a/singolo.html
+++ b/singolo.html
@@ -40,21 +40,21 @@
         <div class="slider__item">
           <div class="slide-1">
             <div class="phone_vertical">
-              <img src="/img/slide-1/phone-vertical/phone-vertical.svg" alt="phone-vertical">
+              <img src="img/slide-1/phone-vertical/phone-vertical.svg" alt="phone-vertical">
             </div>
             <div class="phone_horizontal">
-              <img src="/img/slide-1/phone-horizontal/phone-horizontal.svg" alt="phone-horizontal">
+              <img src="img/slide-1/phone-horizontal/phone-horizontal.svg" alt="phone-horizontal">
             </div>
           </div>
         </div>
         <div class="slider__item">
           <div class="slide-2">
             <div class="phone_vertical_left_right">
-              <div class="phone_vertical_left">
-                <img src="/img/slide-2/phone-vertical-left/slider-content-left.svg" alt="phone left">
+              <div class="phone_vertical phone_vertical__left">
+                <img src="img/slide-2/phone-vertical-left/slider-content-left.svg" alt="phone left">
               </div>
-              <div class="phone_vertical_right">
-                <img src="/img/slide-2/phone-vertical-right/slider-content-right.svg" alt="phone right">
+              <div class="phone_vertical phone_vertical__right">
+                <img src="img/slide-2/phone-vertical-right/slider-content-right.svg" alt="phone right">
               </div>
             </div>
           </div>
