refactor: correct background-images in slider, and z-index for slider-buttons

--- a/singolo.html
+++ b/singolo.html
@@ -49,12 +49,12 @@
         </div>
         <div class="slider__item">
           <div class="slide-2">
+            <div class="phone_vertical  phone_vertical_top">
+            </div>
             <div class="phone_vertical_left_right">
               <div class="phone_vertical phone_vertical__left">
-                <img src="img/slide-2/phone-vertical-left/slider-content-left.svg" alt="phone left">
               </div>
               <div class="phone_vertical phone_vertical__right">
-                <img src="img/slide-2/phone-vertical-right/slider-content-right.svg" alt="phone right">
               </div>
             </div>
           </div>
