--- a/singolo.html
+++ b/singolo.html
@@ -211,6 +211,6 @@
           </div>
         </div>
       </footer>
-      <script async src="script.js"></script>
+      <script async src="/script.js"></script>
 </body>
 </html>
