feat: add styles for Portfolio-menu buttons

--- a/singolo.html
+++ b/singolo.html
@@ -121,9 +121,9 @@
         <div class="wrapper">
           <h2 class="portfolio__title" id="portfolio">Portfolio</h2>
           <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <div class="button_portfolio">
+          <div class="button_portfolio" id="PORTFOLIO">
             <span class="button_portfolio__item">
-              <button class="button_borderd_active">All</button>
+              <button class="button_borderd button_borderd_active">All</button>
             </span>
             <span class="button_portfolio__item">
               <button class="button_borderd">Web Design</button>
