refactor: find bug in border of portfolio-buttons when click, change width of body

--- a/singolo.html
+++ b/singolo.html
@@ -35,24 +35,29 @@
       </div>
     </header>
     <div class="slider">
-      <div class="slider__wrapper">
-        <div class="slider__item">
-          <div class="slide-1">
-            <div class="phone_vertical">
-              <img src="img/slide-1/phone-vertical/phone-vertical.svg" alt="phone-vertical">
+      <div class="wrapper">
+        <div class="slider__wrapper">
+          <div class="slider__item">
+            <div class="slide-1">
+              <div class="phone_vertical">
+                <img src="img/slide-1/phone-vertical/phone-vertical.svg" alt="phone-vertical">
+              </div>
+              <div class="phone_horizontal">
+                <img src="img/slide-1/phone-horizontal/phone-horizontal.svg" alt="phone-horizontal">
+              </div>
             </div>
-            <div class="phone_horizontal">
-              <img src="img/slide-1/phone-horizontal/phone-horizontal.svg" alt="phone-horizontal">
+          </div>
+          <div class="slider__item">
+            <div class="slide-2">
             </div>
           </div>
         </div>
-        <div class="slider__item">
-          <div class="slide-2">
-          </div>
-        </div>
+
       </div>
-      <a class="slider__control slider__control_left" href="#" role="button"></a>
-      <a class="slider__control slider__control_right" href="#" role="button"></a>
+      <div class="slider_control">
+          <a class="slider__control slider__control_left" href="#" role="button"></a>
+          <a class="slider__control slider__control_right" href="#" role="button"></a>
+      </div>
     </div>
       <section class="our-services">
         <div class="wrapper our-services__wrapper">
@@ -138,40 +143,63 @@
           <div class="portfolio_images__wrapper">
               <ul class="portfolio_images">
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-1.png" alt="boat">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-1.png" alt="boat">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-2.png" alt="happyness">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-2.png" alt="happyness">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-3.png" alt="space">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-3.png" alt="space">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-4.png" alt="robot">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-4.png" alt="robot">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-5.png" alt="abstract-animals">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-5.png" alt="abstract-animals">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-6.png" alt="codding">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-6.png" alt="codding">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-7.png" alt="ufo">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-7.png" alt="ufo">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-8.png" alt="chickens">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-8.png" alt="chickens">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-9.png" alt="devil">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-9.png" alt="devil">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
+                  <div class="image"></div>
                   <img src="img/portfolio/portfolio-10.png" alt="lettering">
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-11.png" alt="monster">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-11.png" alt="monster">
+                  </div>
                 </li>
                 <li class="portfolio_images__item">
-                  <img src="img/portfolio/portfolio-12.png" alt="sadness">
+                  <div class="image">
+                    <img src="img/portfolio/portfolio-12.png" alt="sadness">
+                  </div>
                 </li>
             </ul>
           </div>
@@ -187,22 +215,22 @@
             <ul class="ico-networks">
               <li class="ico-networks__link">
                 <a href="#">
-                  <img src="img/svg/social icons/ico-facebook.svg" alt="facebook">
+                  <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
                 </a>
               </li>
               <li class="ico-networks__link">
                 <a href="#">
-                  <img src="img/svg/social icons/ico-google-plus.svg" alt="google">
+                  <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
                 </a>
               </li>
               <li class="ico-networks__link">
                 <a href="#">
-                  <img src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
+                  <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
                 </a>
               </li>
               <li class="ico-networks__link">
                 <a href="#">
-                  <img src="img/svg/social icons/ico-twitter.svg" alt="twitter">
+                  <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
                 </a>
               </li>
             </ul>
