feat: satrt for new, change naming in slider-block, change skript for slider-block, change Slide-1 (One image)

--- a/singolo.html
+++ b/singolo.html
@@ -8,89 +8,81 @@
     <link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
-    <header class="header">
-      <div class="wrapper header__wrapper">
-        <div class="site_name__wrapper">
-          <h1 class="site__name">SINGOLO <span class="star">*</span> </h1>
-        </div>
-        <nav class="header__navigation" id="home">
+  <header class="header">
+    <div class="wrapper header__wrapper">
+      <div class="site_name_wrapper" id="HOME">
+          <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
+      </div>
+      <nav class="header__navigation">
           <ul class="navigation" id="MENU">
             <li class="navigation__link">
               <a class="active" href="#home">HOME</a>
             </li>
             <li class="navigation__link">
-              <a href="#services">SERVICES</a>
+              <a href="#SERVICES">SERVICES</a>
             </li>
             <li class="navigation__link">
-              <a href="#portfolio">PORTFOLIO</a>
+              <a href="#PORTFOLIO">PORTFOLIO</a>
             </li>
             <li class="navigation__link">
               <a href="#about">ABOUT</a>
             </li>
             <li class="navigation__link">
-              <a href="#contact">CONTACT</a>
+              <a href="#CONTACT">CONTACT</a>
             </li>
           </ul>
-        </nav>
-      </div>
-    </header>
-    <div class="slider">
-      <div class="wrapper">
-        <div class="slider__wrapper">
-          <div class="slider__item">
-            <div class="slide-1">
-              <div class="phone_vertical">
-                <img src="img/slide-1/phone-vertical/phone-vertical.svg" alt="phone-vertical">
-              </div>
-              <div class="phone_horizontal">
-                <img src="img/slide-1/phone-horizontal/phone-horizontal.svg" alt="phone-horizontal">
-              </div>
-            </div>
-          </div>
-          <div class="slider__item">
-            <div class="slide-2">
-            </div>
-          </div>
+      </nav>
+    </div>
+  </header>
+  <div class="slider">
+    <div class="slider__wrapper">
+      <div class="slider__item">
+        <div class="slide-1">
         </div>
-        <div class="slider_control">
-            <a class="slider__control slider__control_left" href="#" role="button"></a>
-            <a class="slider__control slider__control_right" href="#" role="button"></a>
+      </div>
+      <div class="slider__item">
+        <div class="slide-2">
         </div>
       </div>
     </div>
-      <section class="our-services">
-        <div class="wrapper our-services__wrapper">
-          <h2 class="our-service__title" id="services">Our Services</h2>
-          <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <div class="wrapper layout-2-span-3-column__wrapper">
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-1.svg" alt="pencil">
+    <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <a class="slider__control slider__control_right" href="#" role="button"></a>
+  </div>
+  <div class="our-services" >
+    <div class="wrapper our-services__wrapper" >
+      <div id="SERVICES">
+            <h2 class="our-service__title">Our Services</h2>
+            <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      </div>
+      <div class="wrapper layout-2-span-3-column__wrapper" >
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-1.svg" alt="pencil">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">Custom Design</h3>
+                  <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                </div>
               </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">Custom Design</h3>
-                <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-2.svg" alt="lamp">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">Inovative Ideas</h3>
+                  <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                </div>
               </div>
-            </div>
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-2.svg" alt="lamp">
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-3.svg" alt="heart">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">Love Is The Answer</h3>
+                  <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                  </p>
+                </div>
               </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">Inovative Ideas</h3>
-                <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-              </div>
-            </div>
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-3.svg" alt="heart">
-              </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">Love Is The Answer</h3>
-                <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                </p>
-              </div>
-            </div>
             <div class="wrapper_layout">
               <div class="our-services__img">
                 <img src="img/svg/items/services-item-4.svg" alt="s-phone">
@@ -118,12 +110,13 @@
                 <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="portfolio">
-        <div class="wrapper">
-          <h2 class="portfolio__title" id="portfolio">Portfolio</h2>
+
+      </div>
+    </div>
+  </div>
+  <div class="portfolio">
+        <div class="wrapper" id="portfolio-1">
+          <h2 class="portfolio__title">Portfolio</h2>
           <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           <div class="button_portfolio" id="PORTFOLIO">
             <span class="button_portfolio__item">
@@ -203,13 +196,13 @@
             </ul>
           </div>
         </div>
-      </section>
-      <footer class="footer">
+  </div>
+  <footer class="footer">
         <div class="wrapper footer__wrapper">
           <div>
             <p>© Copyright 2013</p>
           </div>
-          <div class="social">
+          <div class="social" >
             <ul class="ico-networks">
               <li class="ico-networks__link">
                 <a href="#">
@@ -234,7 +227,7 @@
             </ul>
           </div>
         </div>
-      </footer>
-      <script async src="./script.js"></script>
+  </footer>
+  <script async src="./script.js"></script>
 </body>
 </html>
